Fix last.fm scrobble composer fallback to artist

Now correctly scrobbles with the artist name if the composer field is empty and
the scrobble composer option is enabled, rather than silently failing.

Patch by Ilya Kasnacheev.

BUG:286215
FIXED-IN:2.5
REVIEW:103279